--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 	<title>Currículo - Thiago Alvernaz</title>
 
 	<!-- Style -->
-	<link rel="stylesheet" href="https://raw.github.com/ThiagoAlvernaz/Curriculo/master/style.css">
+	<link rel="stylesheet" href="http://pastebin.com/raw.php?i=dH1JRJmi">
 </head>
 <body>
 
@@ -38,7 +38,6 @@
 			</aside>
 
 		</div>
-https://raw.github.com/ThiagoAlvernaz/Curriculo/master/style.css
 		<div class="pull-right col-right">
 
 			<article>
