--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 	<title>Currículo - Thiago Alvernaz</title>
 
 	<!-- Style -->
-	<link rel="stylesheet" href="http://pastebin.com/raw.php?i=dH1JRJmi">
+	<link rel="stylesheet" href="style.css">
 </head>
 <body>
 
