--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 	<title>Currículo - Thiago Alvernaz</title>
 
 	<!-- Style -->
-	<link rel="stylesheet" href="style.css">
+	<link rel="stylesheet" href="https://raw.github.com/ThiagoAlvernaz/Curriculo/gh-pages/stylesheets/styles.css">
 </head>
 <body>
 
