--- a/index.html
+++ b/index.html
@@ -1,92 +1,152 @@
-<!doctype html>
-<!-- The Time Machine GitHub pages theme was designed and developed by Jon Rohan, on Feb 7, 2012. -->
-<!-- Follow him for fun. http://twitter.com/jonrohan. Tail his code on http://github.com/jonrohan -->
-<html>
+<!DOCTYPE HTML>
+<html lang="pt-br">
 <head>
-  <meta charset="utf-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+	<meta charset="UTF-8">
+	<title>Currículo - Thiago Alvernaz</title>
 
-  <link rel="stylesheet" href="stylesheets/stylesheet.css" media="screen"/>
-  <link rel="stylesheet" href="stylesheets/pygment_trac.css"/>
-  <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
-  <script type="text/javascript" src="javascripts/script.js"></script>
-
-  <title>Curriculo - Thiago Alvernaz</title>
-  <meta name="description" content="">
-
-  <meta name="viewport" content="width=device-width,initial-scale=1">
-
+	<!-- Style -->
+	<link rel="stylesheet" href="stylesheets/stylesheet.css">
 </head>
-
 <body>
 
-  <div class="wrapper">
-    <header>
-      <h1 class="title">Curriculo - Thiago Alvernaz</h1>
-    </header>
-    <div id="container">
-      <p class="tagline"></p>
-      <div id="main" role="main">
-        <div class="download-bar">
-        <div class="inner">
-          <a href="https://github.com/ThiagoAlvernaz/Curriculo/tarball/master" class="download-button tar"><span>Download</span></a>
-          <a href="https://github.com/ThiagoAlvernaz/Curriculo/zipball/master" class="download-button zip"><span>Download</span></a>
-          <a href="https://github.com/ThiagoAlvernaz/Curriculo" class="code">View Curriculo - Thiago Alvernaz on GitHub</a>
-        </div>
-        <span class="blc"></span><span class="trc"></span>
-        </div>
-        <article class="markdown-body">
-          <h3>
-<a name="welcome-to-github-pages" class="anchor" href="#welcome-to-github-pages"><span class="octicon octicon-link"></span></a>Welcome to GitHub Pages.</h3>
+	<div class="conteiner">
+		<div class="pull-left col-left">
 
-<p>This automatic page generator is the easiest way to create beautiful pages for all of your projects. Author your page content here using GitHub Flavored Markdown, select a template crafted by a designer, and publish. After your page is generated, you can check out the new branch:</p>
+			<aside>
 
-<pre><code>$ cd your_repo_root/repo_name
-$ git fetch origin
-$ git checkout gh-pages
-</code></pre>
+				<h1>Thiago Alvernaz</h1>
 
-<p>If you're using the GitHub for Mac, simply sync your repository and you'll see the new branch.</p>
+				<div class="avatar">
+					<img src="avatar.jpg" alt="" class="img">
+				</div>
 
-<h3>
-<a name="designer-templates" class="anchor" href="#designer-templates"><span class="octicon octicon-link"></span></a>Designer Templates</h3>
+	            <h3>Dados:</h3>
+	                <p>Nome: Thiago de Souza Alvernaz</p>
+	            	<p>Idade: 19 anos</p>
+	            	<p>Naturapdade: Contagem</p>
+	            	<p>Estado Civíl: Solteiro</p>
 
-<p>We've crafted some handsome templates for you to use. Go ahead and continue to layouts to browse through them. You can easily go back to edit your page before publishing. After publishing your page, you can revisit the page generator and switch to another theme. Your Page content will be preserved if it remained markdown format.</p>
+	            <h3>Endereço:</h3>
+				<p>Rua: J Nº 77, Mangueiras Belo Horizonte, MG -  CEP: 30666-380</p>
 
-<h3>
-<a name="rather-drive-stick" class="anchor" href="#rather-drive-stick"><span class="octicon octicon-link"></span></a>Rather Drive Stick?</h3>
+				<h3>Contatos:</h3>
+				<p>Telefone:</p>
+					<p>Fixo: (31) 3384-1847</p>
+					<p>Tim:  (31) 9145-2636</p>
+				<p>E-mail: thiagoalvernaz@gmail.com</p>
 
-<p>If you prefer to not use the automatic generator, push a branch named <code>gh-pages</code> to your repository to create a page manually. In addition to supporting regular HTML content, GitHub Pages support Jekyll, a simple, blog aware static site generator written by our own Tom Preston-Werner. Jekyll makes it easy to create site-wide headers and footers without having to copy them across every page. It also offers intelligent blog support and other advanced templating features.</p>
+			</aside>
 
-<h3>
-<a name="authors-and-contributors" class="anchor" href="#authors-and-contributors"><span class="octicon octicon-link"></span></a>Authors and Contributors</h3>
+		</div>
 
-<p>You can <a href="https://github.com/blog/821" class="user-mention">@mention</a> a GitHub username to generate a link to their profile. The resulting <code>&lt;a&gt;</code> element will link to the contributor's GitHub Profile. For example: In 2007, Chris Wanstrath (<a href="https://github.com/defunkt" class="user-mention">@defunkt</a>), PJ Hyett (<a href="https://github.com/pjhyett" class="user-mention">@pjhyett</a>), and Tom Preston-Werner (<a href="https://github.com/mojombo" class="user-mention">@mojombo</a>) founded GitHub.</p>
+		<div class="pull-right col-right">
 
-<h3>
-<a name="support-or-contact" class="anchor" href="#support-or-contact"><span class="octicon octicon-link"></span></a>Support or Contact</h3>
+			<article>
 
-<p>Having trouble with Pages? Check out the documentation at <a href="http://help.github.com/pages">http://help.github.com/pages</a> or contact <a href="mailto:support@github.com">support@github.com</a> and we’ll help you sort it out.</p>
-        </article>
-      </div>
-    </div>
-    <footer>
-      <div class="owner">
-      <p><a href="https://github.com/ThiagoAlvernaz" class="avatar"><img src="https://1.gravatar.com/avatar/962aae7f6ee4837c03679771f3641914?d=https%3A%2F%2Fidenticons.github.com%2Fa310c844b77cef9a88f89a96fa1d0924.png&amp;r=x&amp;s=60" width="48" height="48"/></a> <a href="https://github.com/ThiagoAlvernaz">ThiagoAlvernaz</a> maintains <a href="https://github.com/ThiagoAlvernaz/Curriculo">Curriculo - Thiago Alvernaz</a></p>
+				<h3>Objetivo</h3>
 
 
-      </div>
-      <div class="creds">
-        <small>This page generated using <a href="http://pages.github.com/">GitHub Pages</a><br/>theme by <a href="https://twitter.com/jonrohan/">Jon Rohan</a></small>
-      </div>
-    </footer>
-  </div>
-  <div class="current-section">
-    <a href="#top">Scroll to top</a>
-    <a href="https://github.com/ThiagoAlvernaz/Curriculo/tarball/master" class="tar">tar</a><a href="https://github.com/ThiagoAlvernaz/Curriculo/zipball/master" class="zip">zip</a><a href="" class="code">source code</a>
-    <p class="name"></p>
-  </div>
+				<p>Encontrar um emprego que me desafie a cada dia, que possa me proporcionar novas experiências e conhecimentos aumentado minha produtividade onde os resultados sejam cada vez mais satisfatório. "Foco é dizer não" - Steve Jobs.</p>
 
-  
+				<h3>Experiência</h3>
+
+				<ul>
+					<li>Web Designer & Front-End Developer na empresa Nave Publicidade - De 2011 até o momento.</li>
+				</ul>
+
+				<h3>Educação Acadêmica</h3>
+
+				<ul>
+					<li>Cursando Análise e Desenvolvimento de Sistemas pelo Centro Universatário UNA.</li>
+
+					<li>Ensino Médio Completo - Formação 2011.</li>
+				</ul>
+
+				<h3>Qualificações e Atividades Complementares</h3>
+
+				<ul>
+					<li>Curso Básico de Computação (Digitação, Windows, Word, Excel e Internet) - Formação na SuperGênios no período de 12/02/2007 a 17/05/2007.</li>
+
+					<li>Curso Web Designer (CorelDraw, Photoshop, Flash, Dreamweaver, Fireworks) - Formação na MicroNet no período de 20/10/2008 a 15/06/2009.</li>
+
+					<li>Curso Flash CS4, Dreamweaver CS4, Fireworks CS4, HTML, PHP, Java - Formação Compuway, com duração de 130 horas finalizado em 16/04/2012.</li>
+
+					<li>Curso PHP Essentials - Formação Phprime, com duração de 40 horas entre 14/03/2012 a 04/04/2012.</li>
+
+				    <li>Certificado de participação e vencendor do "1º Jogo Tecnológico", realizada pelo Centro Universatário UNA, no dia 20 de novembro de 2012, com duração de 2 horas.</li>
+
+					<li>Curso de HTML 5 e CSS 3 com instrutor Diego Eis - Formação na School of Net com duração de 8 horas no dia 27/05/2012.</li>
+
+					<li>Certificado de participação da palestra "Empreendedorismo e Monetização, através da Web e Mídias Sociais, ministrado por Jaime Pereira dos Santos, durante o "4º Simpósio de Gestão, Tecnologia e Inovação", realizada pelo Centro Universitário UNA no dia 24 de Abril de 2013, com carga horário de 2 horas.</li>
+
+					<li>Palestrante no "5º Simpósio de Gestão, Tecnologia e Inovação", com tema "HTML5 e tags semânticas", realizado pelo Centro Universitário Una, no dia 23 de Outubro de 2013, com carga horária total de 2 horas.</li>
+
+					<li>Certificado de participação do "3º Jogo Tecnológico", realizada pelo Centro Universatário UNA, no dia 19 de novembro de 2013, com duração de 2 horas.</li>
+
+					<li>Participante do workshop de Be MEAN (MongoDB, Nodejs, Express e AngularJS), com instrutor Jean Carlo Nascimento, com carga horária total de 16 horas entre 07/12/2013 a 15/12/2013.</li>
+				</ul>
+
+				<h3>Conhecimentos</h3>
+
+					<div class="title">HTML</div>
+						<div class="progresso">
+							<span style="width: 93%"></span>
+						</div>
+
+					<div class="title">HTML 5</div>
+						<div class="progresso orange">
+							<span style="width: 45%"></span>
+						</div>
+
+					<div class="title">CSS</div>
+						<div class="progresso  red">
+							<span style="width: 87%"></span>
+						</div>
+
+					<div class="title">CSS 3</div>
+						<div class="progresso  blue">
+							<span style="width: 50%"></span>
+						</div>
+
+					<div class="title">JavaScript</div>
+						<div class="progresso  brown">
+							<span style="width: 41%"></span>
+						</div>
+
+					<div class="title">Jquery</div>
+						<div class="progresso">
+							<span style="width: 58%"></span>
+						</div>
+
+					<div class="title">PHP</div>
+						<div class="progresso  black">
+							<span style="width: 83%"></span>
+						</div>
+
+					<div class="title">WordPress</div>
+						<div class="progresso  pink">
+							<span style="width: 62%"></span>
+						</div>
+
+					<div class="title">Mysql</div>
+						<div class="progresso  red">
+							<span style="width: 47%"></span>
+						</div>
+
+					<div class="title">Em estudo:</div>
+					<ul>
+						<li>Nodejs</li>
+						<li>AngularJS</li>
+						<li>MongoDB</li>
+					</ul>
+
+			</article>
+
+		</div>
+	</div>
+
+	<div class="clear"></div>
+
+	
 </body>
 </html>
