--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 	<title>Currículo - Thiago Alvernaz</title>
 
 	<!-- Style -->
-	<link rel="stylesheet" href="stylesheets/stylesheet.css">
+	<link rel="stylesheet" href="css/style.css">
 </head>
 <body>
 
@@ -17,7 +17,7 @@
 				<h1>Thiago Alvernaz</h1>
 
 				<div class="avatar">
-					<img src="avatar.jpg" alt="" class="img">
+					<img src="imagens/avatar.jpg" alt="" class="img">
 				</div>
 
 	            <h3>Dados:</h3>
