--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 				<h1>Thiago Alvernaz</h1>
 
 				<div class="avatar">
-					<img src="imagens/avatar.jpg" alt="" class="img">
+					<img src="images/avatar.jpg" alt="" class="img">
 				</div>
 
 	            <h3>Dados:</h3>
