--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 	            <h3>Dados:</h3>
 	                <p>Nome: Thiago de Souza Alvernaz</p>
 	            	<p>Idade: 19 anos</p>
-	            	<p>Naturapdade: Contagem</p>
+	            	<p>Naturalidade: Contagem</p>
 	            	<p>Estado Civíl: Solteiro</p>
 
 	            <h3>Endereço:</h3>
