--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
 
                     <h4>Em estudo:</h4>
                     <ul>
-                        <li>Englês</li>
+                        <li>Inglês</li>
                         <li>Nodejs</li>
                         <li>AngularJS</li>
                         <li>MongoDB</li>
