--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
 
                     <p>Curso PHP Essentials - Formação: Phprime, com duração de 40 horas entre 14/03/2012 a 04/04/2012.</p>
 
-                    <p>Certificado de participação e vencendor do "1º Jogo Tecnológico", reapzada pelo Centro Universatário UNA, no dia 20 de novembro de 2012, com duração de 2 horas.</p>
+                    <p>Certificado de participação e vencendor do "1º Jogo Tecnológico", realizada pelo Centro Universatário UNA, no dia 20 de novembro de 2012, com duração de 2 horas.</p>
 
                     <p>Curso de HTML 5 e CSS 3 com instrutor Diego Eis - Formação: na School of Net com duração de 8 horas no dia 27/05/2012.</p>
 
