--- a/index.html
+++ b/index.html
@@ -99,6 +99,9 @@
                 <span>PHP</span>
                 <span>WordPress</span>
                 <span>Mysql</span>
+                <span>Photoshop</span>
+                <span>Flash</span>
+                <span>Corel Draw</span>
 
 
                 <div class="clear"></div>
