--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
             <div>
                 <h3>Dados:</h3>
                 <p>  <span>Nome:        </span>   Thiago de Souza Alvernaz</p>
-                <p>  <span>Idade:       </span>   19 anos</p>
+                <p>  <span>Idade:       </span>   21 anos</p>
                 <p>  <span>Naturalidade:</span>   Contagem</p>
                 <p>  <span>Estado Civíl:</span>   Solteiro</p>
             </div>
@@ -65,6 +65,7 @@
                 <span>HTML5</span>
                 <span>CSS3</span>
                 <span>JavaScript</span>
+                <span>AngularJS</span>
                 <span>Jquery</span>
                 <span>PHP</span>
                 <span>WordPress</span>
@@ -79,7 +80,6 @@
                     <ul>
                         <li>•Inglês</li>
                         <li>•Nodejs</li>
-                        <li>•AngularJS</li>
                         <li>•MongoDB</li>
                     </ul>
                     <div class="clear"></div>   
